fe-20 add missing hover states

--- a/frontend/src/components/CardHeader.scss
+++ b/frontend/src/components/CardHeader.scss
@@ -31,6 +31,9 @@
 .cardHeaderEditIcon {
   cursor: pointer;
 }
+.cardHeaderEditIcon:hover {
+  filter: invert(74%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(0%) contrast(100%);
+}
 
 .cardHeaderTitle {
   flex-grow: 1;
