--- a/frontend/src/components/HeaderBar.scss
+++ b/frontend/src/components/HeaderBar.scss
@@ -11,6 +11,16 @@
   color: var(--text-white);
   cursor: pointer;
 }
+.headerBarButton:hover {
+  border-radius: 8px;
+  border-color: var(--component-background-grey);;
+  background-color: var(--component-background-grey);
+  padding: 16px;
+  font-weight: 600;
+  color: var(--text-white);
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
 
 .headerBarTitle{
   flex-grow: 1;
