--- a/frontend/src/components/overview/OverviewHeader.scss
+++ b/frontend/src/components/overview/OverviewHeader.scss
@@ -9,6 +9,9 @@
   text-decoration: none;
   color: var(--text-grey);
 }
+.overviewHeaderLink:hover{
+  color: var(--text-dark);
+}
 
 .overviewHeaderLink svg{
   margin-left: 12px;
