--- a/frontend/src/components/HeaderBar.scss
+++ b/frontend/src/components/HeaderBar.scss
@@ -11,7 +11,7 @@
   color: var(--text-white);
   cursor: pointer;
 }
-.headerBarButton:hover {
+.headerBarButton:hover, .headerBarButton:focus-visible {
   border-radius: 8px;
   border-color: var(--component-background-grey);;
   background-color: var(--component-background-grey);
@@ -20,6 +20,19 @@
   color: var(--text-white);
   cursor: pointer;
   transition: background-color 0.2s ease;
+  outline: none;
+}
+.headerBarButton:focus-visible{
+  border-radius: 8px;
+  box-shadow: 0 0 0 2px var(--component-background-dark);
+  border-color: var(--component-background-dark);
+  background-color: var(--component-background-grey);
+  padding: 16px;
+  font-weight: 600;
+  color: var(--text-white);
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+  outline: none;
 }
 
 .headerBarTitle{
