--- a/frontend/src/components/overview/OverviewHeader.scss
+++ b/frontend/src/components/overview/OverviewHeader.scss
@@ -5,12 +5,19 @@
 }
 
 .overviewHeaderLink{
+  padding: 4px;
   font-size: 14px;
   text-decoration: none;
   color: var(--text-grey);
 }
 .overviewHeaderLink:hover{
   color: var(--text-dark);
+}
+.overviewHeaderLink:focus{
+  border-radius: 4px;
+  box-shadow: 0 0 0 2px var(--component-background-dark);
+  color: var(--text-dark);
+  outline: none;
 }
 
 .overviewHeaderLink svg{
