--- a/frontend/src/components/searchbar/SelectionMenu.scss
+++ b/frontend/src/components/searchbar/SelectionMenu.scss
@@ -25,9 +25,10 @@
   display: block;
   cursor: pointer;
 }
-.selectionMenuListElement:hover, .selectionMenuListElement.selected {
+.selectionMenuListElement:hover, .selectionMenuListElement.selected, .selectionMenuListElement:focus-visible {
   background-color: var(--component-background-grey);
   color: var(--text-white);
+  outline: none;
 }
 
 .selectionMenuListLine {
@@ -116,6 +117,27 @@
     background-color: var(--component-background-grey);
     color: var(--text-white);
     cursor: pointer;
+  }
+
+  .selectionMenuIcon {
+    filter: invert(74%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(300%) contrast(100%);
+  }
+
+  @include mixins.phone() {
+    .selectionMenu {
+      color: transparent;
+    }
+  }
+}
+.selectionMenuWrapper:focus-visible {
+  outline: none;
+
+  .selectionMenu {
+    border: 1px solid var(--component-background-grey);
+    background-color: var(--component-background-grey);
+    color: var(--text-white);
+    cursor: pointer;
+    outline: none;
   }
 
   .selectionMenuIcon {
