--- a/frontend/src/components/sidebar/SidebarMinimize.scss
+++ b/frontend/src/components/sidebar/SidebarMinimize.scss
@@ -1,8 +1,22 @@
 @use '../../styles/mixins';
 
 .sidebarMinimizeWrapper {
+  border: 2px solid var(--text-dark);
   @include mixins.tablet-and-down() {
     display: none;
     width: 300px;
+  }
+}
+.sidebarMinimizeWrapper:focus-visible {
+  border-radius: 0 15px 15px 0;
+  border: 2px solid var(--text-white);
+  outline: none;
+
+  img {
+    filter: invert(49%) sepia(22%) saturate(1093%) hue-rotate(126deg) brightness(95%) contrast(88%);
+  }
+
+  label {
+    color: var(--text-green);
   }
 }
