fe-23 create component OverlayDropdownCategory

--- a/frontend/src/components/overlay/OverlayCardBox.scss
+++ b/frontend/src/components/overlay/OverlayCardBox.scss
@@ -11,6 +11,11 @@
   display: none;
 }
 
+.overlayCardBox {
+  display: flex;
+  flex-direction: column;
+}
+
 .overlayForm{
   border-radius: 12px;
   background-color: var(--component-background-bright);
