fe-23 create component OverlayDropdownColor

--- a/frontend/src/components/budgets/BudgetCard/BudgetCard.scss
+++ b/frontend/src/components/budgets/BudgetCard/BudgetCard.scss
@@ -28,17 +28,17 @@
   left: 4px;
   position: absolute;
 }
-.budgetCardBarCurrent.dark-green{
-  background-color: var(--dark-green);
+.budgetCardBarCurrent.green{
+  background-color: var(--green);
 }
-.budgetCardBarCurrent.light-blue{
-  background-color: var(--light-blue);
+.budgetCardBarCurrent.cyan{
+  background-color: var(--cyan);
 }
-.budgetCardBarCurrent.beige{
-  background-color: var(--beige);
+.budgetCardBarCurrent.yellow{
+  background-color: var(--yellow);
 }
-.budgetCardBarCurrent.dark-grey{
-  background-color: var(--dark-grey);
+.budgetCardBarCurrent.navy{
+  background-color: var(--navy);
 }
 
 .budgetCardBarLabel {
