--- a/frontend/src/components/budgets/BudgetDiagrammCard/BudgetsDiagramCardRow.scss
+++ b/frontend/src/components/budgets/BudgetDiagrammCard/BudgetsDiagramCardRow.scss
@@ -30,17 +30,17 @@
     margin-right: 8px;
   }
 }
-.cardRowLeftBorder.dark-green{
-  background-color: var(--dark-green);
+.cardRowLeftBorder.green{
+  background-color: var(--green);
 }
-.cardRowLeftBorder.light-blue{
-  background-color: var(--light-blue);
+.cardRowLeftBorder.cyan{
+  background-color: var(--cyan);
 }
-.cardRowLeftBorder.beige{
-  background-color: var(--beige);
+.cardRowLeftBorder.yellow{
+  background-color: var(--yellow);
 }
-.cardRowLeftBorder.dark-grey{
-  background-color: var(--dark-grey);
+.cardRowLeftBorder.navy{
+  background-color: var(--navy);
 }
 
 .cardRowTitle {
