--- a/frontend/src/components/overview/ValueBox.scss
+++ b/frontend/src/components/overview/ValueBox.scss
@@ -11,17 +11,17 @@
   height: 100%;
   width: 4px;
 }
-.valueBoxBorder.beige {
-  background-color: var(--beige);
+.valueBoxBorder.yellow {
+  background-color: var(--yellow);
 }
-.valueBoxBorder.dark-green {
-  background-color: var(--dark-green);
+.valueBoxBorder.green {
+  background-color: var(--green);
 }
-.valueBoxBorder.dark-grey {
-  background-color: var(--dark-grey);
+.valueBoxBorder.navy {
+  background-color: var(--navy);
 }
-.valueBoxBorder.light-blue {
-  background-color: var(--light-blue);
+.valueBoxBorder.cyan {
+  background-color: var(--cyan);
 }
 .valueBoxBorder.sepia {
   background-color: var(--sepia);
