--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -2,6 +2,24 @@
   font-family: 'Public Sans', sans-serif;
   font-weight: normal;
 
+  --green: #277C78;
+  --yellow: #F2CDAC;
+  --cyan: #82C9D7;
+  --navy: #626070;
+  --red: #C94736;
+  --purple: #826CB0;
+  --turquoise: #597C7C;
+  --brown: #93674F;
+  --magenta: #934F6F;
+  --blue: #3F82B2;
+  --grey: #97A0AC;
+  --army: #7F9161;
+  --pink: #AF81BA;
+  --gold: #CAB361;
+  --orange: #BE6C49;
+  --sepia: #F8F4F0;
+  --white: #FFFFFF;
+
   --sidebar-background-grey: #201F24;
   --sidebar-title: #FFFFFF;
   --sidebar-entry-text-default: #B3B3B3;
@@ -21,13 +39,6 @@
   --text-grey: #696868;
   --text-white: #FFFFFF;
   --text-red: #C94736;
-
-  --beige: #F2CDAC;
-  --dark-green: #277C78;
-  --dark-grey: #626070;
-  --light-blue: #82C9D7;
-  --sepia: #F8F4F0;
-  --purple: #826CB0;
 
   --beige-lightened: #F8DDC3;
   --dark-green-lightened: #51A39E;
