--- a/frontend/src/components/CardHeader.scss
+++ b/frontend/src/components/CardHeader.scss
@@ -12,17 +12,17 @@
   height: 16px;
   width: 16px;
 }
-.cardHeaderCircle.dark-green{
-  background-color: var(--dark-green);
+.cardHeaderCircle.green{
+  background-color: var(--green);
 }
-.cardHeaderCircle.light-blue{
-  background-color: var(--light-blue);
+.cardHeaderCircle.cyan{
+  background-color: var(--cyan);
 }
-.cardHeaderCircle.beige{
-  background-color: var(--beige);
+.cardHeaderCircle.yellow{
+  background-color: var(--yellow);
 }
-.cardHeaderCircle.dark-grey{
-  background-color: var(--dark-grey);
+.cardHeaderCircle.navy{
+  background-color: var(--navy);
 }
 .cardHeaderCircle.purple{
   background-color: var(--purple);
