--- a/frontend/src/components/overview/bills/BillRow.scss
+++ b/frontend/src/components/overview/bills/BillRow.scss
@@ -6,14 +6,14 @@
   flex-direction: row;
   align-items: center;
 }
-.overviewBillsRow.beige {
-  border-left: 4px solid var(--beige);
+.overviewBillsRow.yellow {
+  border-left: 4px solid var(--yellow);
 }
-.overviewBillsRow.dark-green {
-  border-left: 4px solid var(--dark-green);
+.overviewBillsRow.green {
+  border-left: 4px solid var(--green);
 }
-.overviewBillsRow.light-blue {
-  border-left: 4px solid var(--light-blue);
+.overviewBillsRow.cyan {
+  border-left: 4px solid var(--cyan);
 }
 
 .overviewBillsRowTitle {
