wo-8 refactor components part3

--- a/frontend/src/components/budgets/BudgetCard/TransactionRowSmall.scss
+++ b/frontend/src/components/budgets/BudgetCard/TransactionRowSmall.scss
@@ -22,7 +22,7 @@
   font-size: 12px;
   font-weight: 700;
 }
-.overviewTransactionRowSmallInfoValue.dark {
+.overviewTransactionRowSmallInfoValue.black {
   color: var(--text-dark);
 }
 .overviewTransactionRowSmallInfoValue.green {
