--- a/frontend/src/components/transactions/table/TableRow.scss
+++ b/frontend/src/components/transactions/table/TableRow.scss
@@ -31,7 +31,7 @@
   font-weight: 700;
   color: var(--text-dark);
 }
-.tableRowValue.dark {
+.tableRowValue.black {
   color: var(--text-dark);
 }
 .tableRowValue.green {
