--- a/frontend/src/components/overview/transactions/TransactionRow.scss
+++ b/frontend/src/components/overview/transactions/TransactionRow.scss
@@ -22,7 +22,7 @@
   font-size: 14px;
   font-weight: 700;
 }
-.overviewTransactionRowInfoValue.dark {
+.overviewTransactionRowInfoValue.black {
   color: var(--text-dark);
 }
 .overviewTransactionRowInfoValue.green {
