--- a/frontend/src/components/transactions/table/TableRowSmall.scss
+++ b/frontend/src/components/transactions/table/TableRowSmall.scss
@@ -44,7 +44,7 @@
   font-weight: 700;
   color: var(--text-dark);
 }
-.tableRowSmallValue.dark {
+.tableRowSmallValue.black {
   color: var(--text-dark);
 }
 .tableRowSmallValue.green {
