fe-23 fix OverlayDropdownColor

--- a/frontend/src/components/overlay/OverlayDropDownColorListItem.scss
+++ b/frontend/src/components/overlay/OverlayDropDownColorListItem.scss
@@ -81,8 +81,11 @@
 }
 .dropDownColorListItem.disabled {
   opacity: 0.4;
-  cursor: not-allowed;
   pointer-events: none;
+}
+
+.dropDownColorListItemContainer.disabled {
+  cursor: not-allowed;
 }
 
 .dropDownColorListItemLine {
