fe-23 add business logic for frontend and backend

--- a/frontend/src/components/CardHeader.scss
+++ b/frontend/src/components/CardHeader.scss
@@ -15,17 +15,59 @@
 .cardHeaderCircle.green{
   background-color: var(--green);
 }
-.cardHeaderCircle.cyan{
-  background-color: var(--cyan);
-}
 .cardHeaderCircle.yellow{
   background-color: var(--yellow);
+}
+.cardHeaderCircle.cyan{
+  background-color: var(--cyan);
 }
 .cardHeaderCircle.navy{
   background-color: var(--navy);
 }
+.cardHeaderCircle.red{
+  background-color: var(--red);
+}
 .cardHeaderCircle.purple{
   background-color: var(--purple);
+}
+.cardHeaderCircle.turquoise{
+  background-color: var(--turquoise);
+}
+.cardHeaderCircle.brown{
+  background-color: var(--brown);
+}
+.cardHeaderCircle.brown{
+  background-color: var(--brown);
+}
+.cardHeaderCircle.magenta{
+  background-color: var(--magenta);
+}
+.cardHeaderCircle.blue{
+  background-color: var(--blue);
+}
+.cardHeaderCircle.grey{
+  background-color: var(--grey);
+}
+.cardHeaderCircle.army{
+  background-color: var(--army);
+}
+.cardHeaderCircle.pink{
+  background-color: var(--pink);
+}
+.cardHeaderCircle.gold{
+  background-color: var(--gold);
+}
+.cardHeaderCircle.orange{
+  background-color: var(--orange);
+}
+.cardHeaderCircle.sepia{
+  background-color: var(--sepia);
+}
+.cardHeaderCircle.white{
+  background-color: var(--white);
+}
+.cardHeaderCircle.black{
+  background-color: var(--black);
 }
 
 .cardHeaderEditIcon {
