--- a/frontend/src/components/budgets/BudgetDiagrammCard/BudgetsDiagramCardRow.scss
+++ b/frontend/src/components/budgets/BudgetDiagrammCard/BudgetsDiagramCardRow.scss
@@ -33,14 +33,59 @@
 .cardRowLeftBorder.green{
   background-color: var(--green);
 }
-.cardRowLeftBorder.cyan{
-  background-color: var(--cyan);
-}
 .cardRowLeftBorder.yellow{
   background-color: var(--yellow);
 }
+.cardRowLeftBorder.cyan{
+  background-color: var(--cyan);
+}
 .cardRowLeftBorder.navy{
   background-color: var(--navy);
+}
+.cardRowLeftBorder.red{
+  background-color: var(--red);
+}
+.cardRowLeftBorder.purple{
+  background-color: var(--purple);
+}
+.cardRowLeftBorder.turquoise{
+  background-color: var(--turquoise);
+}
+.cardRowLeftBorder.brown{
+  background-color: var(--brown);
+}
+.cardRowLeftBorder.brown{
+  background-color: var(--brown);
+}
+.cardRowLeftBorder.magenta{
+  background-color: var(--magenta);
+}
+.cardRowLeftBorder.blue{
+  background-color: var(--blue);
+}
+.cardRowLeftBorder.grey{
+  background-color: var(--grey);
+}
+.cardRowLeftBorder.army{
+  background-color: var(--army);
+}
+.cardRowLeftBorder.pink{
+  background-color: var(--pink);
+}
+.cardRowLeftBorder.gold{
+  background-color: var(--gold);
+}
+.cardRowLeftBorder.orange{
+  background-color: var(--orange);
+}
+.cardRowLeftBorder.sepia{
+  background-color: var(--sepia);
+}
+.cardRowLeftBorder.white{
+  background-color: var(--white);
+}
+.cardRowLeftBorder.black{
+  background-color: var(--black);
 }
 
 .cardRowTitle {
