--- a/frontend/src/components/overview/ValueBox.scss
+++ b/frontend/src/components/overview/ValueBox.scss
@@ -11,20 +11,62 @@
   height: 100%;
   width: 4px;
 }
-.valueBoxBorder.yellow {
-  background-color: var(--yellow);
-}
-.valueBoxBorder.green {
+.valueBoxBorder.green{
   background-color: var(--green);
 }
-.valueBoxBorder.navy {
-  background-color: var(--navy);
+.valueBoxBorder.yellow{
+  background-color: var(--yellow);
 }
-.valueBoxBorder.cyan {
+.valueBoxBorder.cyan{
   background-color: var(--cyan);
 }
-.valueBoxBorder.sepia {
+.valueBoxBorder.navy{
+  background-color: var(--navy);
+}
+.valueBoxBorder.red{
+  background-color: var(--red);
+}
+.valueBoxBorder.purple{
+  background-color: var(--purple);
+}
+.valueBoxBorder.turquoise{
+  background-color: var(--turquoise);
+}
+.valueBoxBorder.brown{
+  background-color: var(--brown);
+}
+.valueBoxBorder.brown{
+  background-color: var(--brown);
+}
+.valueBoxBorder.magenta{
+  background-color: var(--magenta);
+}
+.valueBoxBorder.blue{
+  background-color: var(--blue);
+}
+.valueBoxBorder.grey{
+  background-color: var(--grey);
+}
+.valueBoxBorder.army{
+  background-color: var(--army);
+}
+.valueBoxBorder.pink{
+  background-color: var(--pink);
+}
+.valueBoxBorder.gold{
+  background-color: var(--gold);
+}
+.valueBoxBorder.orange{
+  background-color: var(--orange);
+}
+.valueBoxBorder.sepia{
   background-color: var(--sepia);
+}
+.valueBoxBorder.white{
+  background-color: var(--white);
+}
+.valueBoxBorder.black{
+  background-color: var(--black);
 }
 
 .valueBoxContent {
