--- a/frontend/src/components/budgets/BudgetCard/BudgetCard.scss
+++ b/frontend/src/components/budgets/BudgetCard/BudgetCard.scss
@@ -31,14 +31,59 @@
 .budgetCardBarCurrent.green{
   background-color: var(--green);
 }
-.budgetCardBarCurrent.cyan{
-  background-color: var(--cyan);
-}
 .budgetCardBarCurrent.yellow{
   background-color: var(--yellow);
 }
+.budgetCardBarCurrent.cyan{
+  background-color: var(--cyan);
+}
 .budgetCardBarCurrent.navy{
   background-color: var(--navy);
+}
+.budgetCardBarCurrent.red{
+  background-color: var(--red);
+}
+.budgetCardBarCurrent.purple{
+  background-color: var(--purple);
+}
+.budgetCardBarCurrent.turquoise{
+  background-color: var(--turquoise);
+}
+.budgetCardBarCurrent.brown{
+  background-color: var(--brown);
+}
+.budgetCardBarCurrent.brown{
+  background-color: var(--brown);
+}
+.budgetCardBarCurrent.magenta{
+  background-color: var(--magenta);
+}
+.budgetCardBarCurrent.blue{
+  background-color: var(--blue);
+}
+.budgetCardBarCurrent.grey{
+  background-color: var(--grey);
+}
+.budgetCardBarCurrent.army{
+  background-color: var(--army);
+}
+.budgetCardBarCurrent.pink{
+  background-color: var(--pink);
+}
+.budgetCardBarCurrent.gold{
+  background-color: var(--gold);
+}
+.budgetCardBarCurrent.orange{
+  background-color: var(--orange);
+}
+.budgetCardBarCurrent.sepia{
+  background-color: var(--sepia);
+}
+.budgetCardBarCurrent.white{
+  background-color: var(--white);
+}
+.budgetCardBarCurrent.black{
+  background-color: var(--black);
 }
 
 .budgetCardBarLabel {
