fe-23 fix unit tests

--- a/frontend/src/components/overlay/dropdownCategory/DropdownCategoryBar.scss
+++ b/frontend/src/components/overlay/dropdownCategory/DropdownCategoryBar.scss
@@ -23,6 +23,10 @@
   cursor: not-allowed;
 }
 
+.DropdownCategoryBarContainer {
+  margin-bottom: 16px;
+}
+
 .dropdownCategoryBarItem.disabled {
   opacity: 0.4;
   pointer-events: none;
