--- a/frontend/src/components/overlay/dropdownCategory/OverlayDropdownCategory.scss
+++ b/frontend/src/components/overlay/dropdownCategory/OverlayDropdownCategory.scss
@@ -1,5 +1,9 @@
 @use '../../../styles/forms';
 
+.dropdownCategoryContainer {
+  position: relative;
+}
+
 .dropdownCategoryList {
   border-radius: 8px;
   box-shadow: 0 5px 40px -25px var(--component-background-dark);
