fe-23 fix transaction layout

--- a/frontend/src/components/searchbar/SelectionMenu.scss
+++ b/frontend/src/components/searchbar/SelectionMenu.scss
@@ -64,6 +64,7 @@
     padding: 0 12px;
     background: transparent;
     min-height: 40px;
+    max-height: 40px;
     width: 42px;
     min-width: 42px;
     color: transparent;
