--- a/frontend/src/components/overlay/OverlayCardBox.scss
+++ b/frontend/src/components/overlay/OverlayCardBox.scss
@@ -1,3 +1,5 @@
+@use '../../styles/mixins';
+
 .overlayBackground{
   background-color: rgb(0,0,0,0.5);
   height: 100%;
@@ -22,10 +24,16 @@
   padding: 32px;
   height: auto;
   width: 560px;
-  bottom: calc(50% - 245px);
-  left: calc(50% - 280px);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   position: fixed;
   z-index: 4;
+
+  @include mixins.phone() {
+    padding: 24px 20px;
+    width: calc(100% - 40px);
+  }
 }
 .overlayForm.isHidden {
   display: none;
