fe-24 integrate CardHeaderDropdownList in CardHeader

--- a/frontend/src/components/CardHeader.scss
+++ b/frontend/src/components/CardHeader.scss
@@ -84,6 +84,10 @@
   outline: none;
 }
 
+.cardHeaderEditIconContainer {
+  position: relative;
+}
+
 .cardHeaderTitle {
   flex-grow: 1;
   font-size: 20px;
