--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -19,6 +19,7 @@
   --orange: #BE6C49;
   --sepia: #F8F4F0;
   --white: #FFFFFF;
+  --black: #000000;
 
   --sidebar-background-grey: #201F24;
   --sidebar-title: #FFFFFF;
