--- a/frontend/src/components/atoms/CardHeaderDropdownItem.scss
+++ b/frontend/src/components/atoms/CardHeaderDropdownItem.scss
@@ -3,8 +3,19 @@
   padding: 12px 20px;
   font-size: 14px;
 }
+.cardHeaderDropdownItem.black {
+  color: var(--black);
+}
+.cardHeaderDropdownItem.red {
+  color: var(--red);
+}
 .cardHeaderDropdownItem:hover, .cardHeaderDropdownItem:focus {
   background-color: var(--component-background-light);
   color: var(--text-white);
   outline: none;
+}
+
+.cardHeaderDropdownItemLabel {
+  text-wrap: nowrap;
+  cursor: pointer;
 }
