--- a/frontend/src/components/atoms/CardHeaderDropdownList.scss
+++ b/frontend/src/components/atoms/CardHeaderDropdownList.scss
@@ -1,9 +1,13 @@
 .cardHeaderDropdownList {
+  box-shadow: 0 5px 40px -25px var(--component-background-dark);
   border-radius: 8px;
+  background-color: var(--component-background-bright);
   display: none;
   top: 0;
   right: 0;
   position: absolute;
+  cursor: pointer;
+  z-index: 1;
 }
 .cardHeaderDropdownList.isVisible {
   display: block;
@@ -11,4 +15,5 @@
 
 .cardHeaderDropdownListLine {
   margin: 0 20px;
+  max-width: calc(100% - 40px);
 }
