--- a/frontend/src/components/budgets/BudgetCard/BudgetCard.scss
+++ b/frontend/src/components/budgets/BudgetCard/BudgetCard.scss
@@ -3,7 +3,7 @@
 .budgetCard {
   border-radius: 12px;
   background-color: var(--component-background-bright);
-  padding: 32px;
+  padding: 32px 32px 12px 32px;
   display: flex;
   flex-direction: column;
   row-gap: 20px;
