fe-26 hide sidepanel in showcase

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -22,6 +22,10 @@
     padding-left: 0;
   }
 }
+.content.hidden {
+  padding: 0;
+  transition: none;
+}
 
 .webapp {
   background-color: var(--page-background);
