--- a/frontend/src/styles/forms.scss
+++ b/frontend/src/styles/forms.scss
@@ -1,5 +1,6 @@
 @mixin form-field-title() {
   margin-bottom: 8px;
+  display: block;
   font-size: 13px;
   font-weight: 600;
   color: var(--text-grey);
